--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <nav>
-                <img src="http://via.placeholder.com/200x70" alt="hero">
+                <img src="http://via.placeholder.com/200x70">
                 <ul>
                     <li>Nav Item 1</li>
                     <li>Nav Item 2</li>
@@ -23,5 +23,11 @@
         </header>
 
     </body>
+    <main>
+        <div class = "img" >
+            <img src="http://via.placeholder.com/960x450" alt="hero-banner">
+        </div>
+
+    </main>
 
 </html>
