--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <nav>
-                <img src="http://via.placeholder.com/200x70">
+                <img src="http://via.placeholder.com/200x70/0000">
                 <ul>
                     <li>Nav Item 1</li>
                     <li>Nav Item 2</li>
@@ -24,9 +24,15 @@
 
     </body>
     <main>
-        <div class = "img" >
-            <img src="http://via.placeholder.com/960x450" alt="hero-banner">
+        <div class="img">
+            <img src="http://via.placeholder.com/960x450/0000">
         </div>
+        <div class="imgs">
+            <div class=left><img src="http://via.placeholder.com/300x375/0000"></div>
+            <div class="center"><img src="http://via.placeholder.com/300x375/0000"></div>
+            <div class="rihgt"><img src="http://via.placeholder.com/300x375/0000"></div>
+        </div>
+    
 
     </main>
 
