--- a/index.html
+++ b/index.html
@@ -1,43 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <title>Document</title>
-    <link href="CSS/rest.css" type="text/css" rel="stylesheet" />
-    <link href="CSS/stayl.css" type="text/css" rel="stylesheet" />
+  <title>Wireframe Exercise Solution</title>
+  <link rel="stylesheet" type="text/css" href="CSS/rest.css" />
+  <link rel="stylesheet" type="text/css" href="CSS/stayl.css" />
 </head>
 
 <body>
+  <header>
+    <nav>
+      <img src="http://placehold.it/200x70/0000">
+      <ul>
+        <li>
+          <a href="#">Nav Item 1</a>
+        </li>
+        <li>
+          <a href="#">Nav Item 2</a>
+        </li>
+        <li>
+          <a href="#">Nav Item 3</a>
+        </li>
+        <li>
+          <a href="#">Nav Item 4</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-    <body>
-        <header>
-            <nav>
-                <img src="http://via.placeholder.com/200x70/0000">
-                <ul>
-                    <li>Nav Item 1</li>
-                    <li>Nav Item 2</li>
-                    <li>Nav Item 3</li>
-                    <li>Nav Item 4</li>
-                </ul>
-            </nav>
-        </header>
+  <main>
+    <img src="http://placehold.it/960x450/0000">
+    <ul>
+      <li>
+        <img src="http://placehold.it/300x375/0000">
+      </li>
+      <li>
+        <img src="http://placehold.it/300x375/0000">
+      </li>
+      <li>
+        <img src="http://placehold.it/300x375/0000">
+      </li>
+    </ul>
 
-    </body>
-    <main>
-        <div>
-            <img src="http://via.placeholder.com/960x450/0000">
-        </div>
-        <div>
-            <div class=left><img src="http://via.placeholder.com/300x375/0000"></div>
-            <div class="center"><img src="http://via.placeholder.com/300x375/0000"></div>
-            <div class="rihgt"><img src="http://via.placeholder.com/300x375/0000"></div>
-        </div>
-        <div class="imgp">
-                <img src="http://via.placeholder.com/480x400/0000">
-        </div>
-        <div class="text"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p></div>
-        <button>Call to action</button>
-    </main>
-    <footer></footer>
+    <section>
+      <img src="http://placehold.it/480x400/0000">
+      <div>
+        <h2>Featured Section Heading</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut pharetra sit amet aliquam id diam maecenas ultricies. Facilisis mauris sit amet massa vitae tortor condimentum lacinia.
+          Elementum tempus egestas sed sed risus. Quis commodo odio aenean sed adipiscing. Sed enim ut sem viverra. Aenean et tortor at risus viverra adipiscing at in. Id diam vel quam elementum pulvinar. Consequat nisl vel pretium lectus quam id leo.
+          Dictum sit amet justo donec enim diam vulputate ut. Senectus et netus et malesuada fames ac turpis egestas. Aliquam nulla facilisi cras fermentum odio eu feugiat pretium. Pulvinar mattis nunc sed blandit libero volutpat sed cras. Turpis tincidunt
+          id aliquet risus. Tincidunt dui ut ornare lectus sit amet. Adipiscing diam donec adipiscing tristique risus nec feugiat in. Faucibus vitae aliquet nec ullamcorper sit amet risus nullam eget. Ut ornare lectus sit amet est placerat in egestas
+          erat. Nam at lectus urna duis convallis convallis tellus. Turpis egestas pretium aenean pharetra magna.
+        </p>
+        <button>Call to Action</button>
+      </div>
+    </section>
+  </main>
+
+  <footer></footer>
+</body>
 
 </html>
